# OpenCL-template

./: CMakeLists.txt  README.md
src/: add.cl  main.cpp
